--- a/style.css
+++ b/style.css
@@ -260,10 +260,11 @@
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-    width: 100%;
+    width: 100% !important;
     height: 80vh;
-    background: url("img/team.jpg") top center;
-    background-size: cover;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: center center;
     position: relative;
 }
 
